# llm-swarm-desktop

./: .gitignore  Makefile  README.md  pyproject.toml  swarm-pin.txt  webclient-pin.txt
.github/workflows/: ci.yml
agent/: identity.py  keychain.py
agent/auth/: bff_client.py  models.py  pairing.py
app/: logging_setup.py  main.py  state.py
app/resources/: __init__.py  resources.qrc
app/resources/fonts/: NOTICE.md
app/screens/: __init__.py  balance.py  hardware.py  logs.py  models.py  settings.py
app/styles/: __init__.py  pairing.qss
app/tray/: __init__.py  icons.py  status_tray.py
app/windows/: __init__.py  main_window.py
app/windows/pairing/: __init__.py  controller_protocol.py  pairing_panel.py
tests/integration/: conftest.py  test_app_bootstrap.py  test_pairing_e2e.py  test_vendor_imports.py
tests/unit/: test_bff_client.py  test_build_qss.py  test_build_qss_source_resolution.py  test_identity.py  test_keychain.py  test_logging_setup.py  test_main_window.py  test_pairing.py  test_pairing_ui.py  test_status_tray.py  test_tray_icons.py
tools/: build_qss.py  sync_vendor.py
