[project]
name = "llm-swarm-desktop"
version = "0.1.0.dev0"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "qasync>=0.27",
    "httpx>=0.27",
    "keyring>=25",
    "cryptography>=42",
    "qrcode[pil]>=7.4",
    "platformdirs>=4",
    "base58>=2.1",
    "pydantic>=2.6",
    "PyNaCl>=1.5",
]

[project.scripts]
llm-swarm-desktop = "app.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.4",
    "respx>=0.21",
    "keyrings-alt>=5",
    "ruff>=0.4",
    "pyright>=1.1.360",
    "colour-science>=0.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "agent", "vendor/node", "vendor/shared"]

[tool.hatch.build.targets.wheel.sources]
"vendor/node" = "node"
"vendor/shared" = "shared"

# Editable install: expose vendor/ so `import node` and `import shared` work
# in dev without reinstall. hatchling editable adds all paths[] to the .pth file.
[tool.hatch.build.targets.editable]
path = "."
extra-paths = ["vendor"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pyright]
pythonVersion = "3.11"
strict = ["app", "agent", "tools"]
exclude = ["vendor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
